--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,9 +4,9 @@
     ☰
   </button>
   <ul [class.active]="menuOpen" class="nav-links">
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/services">Services</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/video">vidéo</a></li>
+    <li><a href="/services">Services</a></li>
+    <li><a href="/contact">Contact</a></li>
   </ul>
 </nav>
